# ignisos

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clang.cmake
include/: CMakeLists.txt  byte.hpp  mini_uart.hpp  mm.hpp  span.hpp  type_traits.hpp  utils.hpp
include/peripherals/: base.hpp  gpio.hpp
src/: CMakeLists.txt  boot.S  kernel.cpp  mini_uart.cpp  utils.S
